# network-stack

./: .gitignore  .gitmodules  Makefile  README.md  client_server_utils.c  client_server_utils.h  simple_client.c  simple_server.c  test_client.c  test_server.c  utils.c  utils.h
client_server_onesided/: Makefile  client.c  client.h  client_server_utils.c  client_server_utils.h  client_test.c  onesided_client.c  onesided_client.h  onesided_global.h  onesided_server.c  onesided_server.h  onesided_test.c  onesided_test.h  onesided_test_all.c  onesided_test_all.h  onesided_test_client.c  server.c  server.h  server_test.c  server_test_cli.c  simple_unit_test.h
client_server_onesided/cli_test/: Makefile  client_test_cli.c  onesided_test_cli.c  server_test_cli.c
client_server_onesided/src/: client_server_utils.h  onesided_client.c  onesided_client.h  onesided_global.h  onesided_server.c  onesided_server.h
client_server_onesided/tests/: Makefile  client_test_asan  onesided_test_all.c  onesided_test_all.h  onesided_test_client.c  onesided_test_server.c  server_test_asan  simple_unit_test.h
client_server_twosided/: CMakeLists.txt  CMakeLists_dpdk.txt  CMakeLists_scone.txt  Client.cpp  Client.h  Makefile  Server.cpp  Server.h  client_server_common.cpp  client_server_common.h  client_test.cpp  common.cpp  common.h  server.cpp  server_test.cpp  simple_unit_test.h
client_server_twosided/src/: Client.cpp  Client.h  PendingRequestQueue.cpp  PendingRequestQueue.h  Server.cpp  Server.h  ServerThread.cpp  ServerThread.h  client_server_common.cpp  client_server_common.h  sent_message_tag.cpp  sent_message_tag.h
client_server_twosided/tests/: client_test.cpp  client_test_perf.cpp  encryption_test.cpp  generate_traces.cpp  generate_traces.h  kv_bench.cpp  kv_bench.h  kv_bench_main.cpp  offline_tests.cpp  server_test.cpp  server_test_perf.cpp  simple_unit_test.h  test_client.py  test_common.cpp  test_common.h  untrusted_kv.cpp  untrusted_kv.h
iperf/: client.sh  client_scone.sh  server.sh
playground_onesided/: client_server_utils.c  simple_client.c
